--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /Booleans/build/
 /UserData/nbproject/private/
 /UserData/build/
+/Quiz/nbproject/private/
+/Quiz/build/
+/Repeater/nbproject/private/
+/Repeater/build/
+/Doubles/nbproject/private/
+/Doubles/build/
