--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@
 /Doubles/build/
 /GraphingFormulas/nbproject/private/
 /GraphingFormulas/build/
+/ArrayFun/nbproject/private/
+/ArrayFun/build/
+/ForLoopFun/nbproject/private/
+/ForLoopFun/build/
+/Car/nbproject/private/
+/Car/dist/
+/Car/build/
