--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Puzzles/build/
 /SearchList/nbproject/private/
 /SearchList/build/
+/ChooseYourOwnAdventure/nbproject/private/
+/ChooseYourOwnAdventure/build/
