--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /SearchList/build/
 /ChooseYourOwnAdventure/nbproject/private/
 /ChooseYourOwnAdventure/build/
+/Hangman/nbproject/private/
+/TicTacToe/nbproject/private/
+/TicTacToe/build/
+/TicTacToe/dist/
